implementing rooms, reworking code

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Khicken",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "socket.io": "^3.0.0"
   }
